--- a/css/app.css
+++ b/css/app.css
@@ -49,12 +49,20 @@ body {
   width: 90%;
 }
 
+#misc-container{
+  gap: 10px;
+}
+
+.misc-button{
+  min-width: 150px;
+}
+
 .option-container {
-    /* display: grid;
-    grid-template-columns: repeat(5, 1fr); */
-    width: 600px;
-    gap: 10px;
-    /* grid-auto-rows: minmax(100px, auto); */
+  /* display: grid;
+  grid-template-columns: repeat(5, 1fr); */
+  width: 600px;
+  gap: 10px;
+  /* grid-auto-rows: minmax(100px, auto); */
 }
 
 .option-button {
@@ -77,6 +85,7 @@ body {
   border: #0d1b1e 2px solid;
   box-sizing: border-box;
   overflow: hidden;
+  gap: 10px;
 }
 
 .footer {
