--- a/css/app.css
+++ b/css/app.css
@@ -148,6 +148,7 @@ body {
 .border-box {
   border: black 2px solid;
   box-sizing: border-box;
+  background-color: white;
 }
 
 .buttons, .dropdowns, .inputs {
@@ -172,13 +173,14 @@ body {
 .scrolling-bg {
   overflow: hidden;
   overflow-y: hidden;
-  opacity: 0.1;
+  opacity: 0.3;
   z-index: -100;
   position: fixed;
   display: block;
   width: 100%;
   height: 100%;
-  background-image: url("../img/tile_2.png");
+  background-image: url("../img/site-style/tiled_5.png");
+  background-color: #c3d2f1;
   animation: anim-scroll 16s linear infinite;
 }
 
@@ -207,7 +209,7 @@ body {
     background-position: 0px 0px;
   }
   100% {
-    background-position: -256px -256px;
+    background-position: -320px -320px;
   }
 }
 @keyframes anim-float {
