--- a/css/app.css
+++ b/css/app.css
@@ -44,6 +44,11 @@ body {
 }
 
 #main-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  
   padding-top: 1em;
   margin: auto;
   width: 90%;
@@ -214,5 +219,13 @@ body {
   }
   to {
     transform: rotate(15deg);
+  }
+}
+
+@media only all and (max-width: 1200px) {
+  #main-container {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
   }
 }
