--- a/css/app.css
+++ b/css/app.css
@@ -25,15 +25,6 @@ body {
   margin: auto;
 }
 
-#main-canvas{
-  display: block;
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
-  height: auto;
-  object-fit: scale-down;
-}
-
 .hide {
   display: none !important;
   pointer-events: none !important;
@@ -44,8 +35,12 @@ body {
 }
 
 #main-container {
-  display: flex;
-  flex-direction: row;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  /* grid-auto-rows: minmax(100px, auto); */
+
+  /* display: flex;
+  flex-direction: row; */
   align-items: center;
   justify-content: center;
   
@@ -54,7 +49,26 @@ body {
   width: 90%;
 }
 
+#main-canvas-container{
+  
+}
+
+#main-canvas{
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  width: auto;
+  height: auto;
+  object-fit: scale-down;
+}
+
+#user-interface-container{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
 #misc-container{
+  padding-top: 1em;
   gap: 10px;
 }
 
@@ -62,15 +76,22 @@ body {
   min-width: 150px;
 }
 
-#navbar-container{
+#category-container{
+  display: grid;
+  grid-auto-flow: row;
   gap: 10px;
-  overflow-x: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+.category-button{
+  display: block;
 }
 
 .option-container {
   /* display: grid;
   grid-template-columns: repeat(5, 1fr); */
-  width: 600px;
+  /* width: 600px; */
   gap: 10px;
   /* grid-auto-rows: minmax(100px, auto); */
 }
@@ -224,8 +245,17 @@ body {
 
 @media only all and (max-width: 1200px) {
   #main-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    grid-template-columns: repeat(1, 1fr);
+    max-width: 600px;
   }
+  #user-interface-container{
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
+  #category-container{
+    grid-auto-flow: column;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+
 }
