--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,20 @@ body {
   pointer-events: none !important;
 }
 
+.frame {
+  position: absolute;
+  pointer-events: none;
+}
+
+.border-box, .grid-item {
+  border: #0d1b1e 2px solid;
+  box-sizing: border-box;
+  overflow: hidden;
+  /* gap: 10px; */
+  background-color: white;
+  border-radius: 15px;
+}
+
 #main-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -41,16 +55,29 @@ body {
 
   /* display: flex;
   flex-direction: row; */
-  align-items: center;
+  align-items: start;
   justify-content: center;
   
   padding-top: 1em;
   margin: auto;
   width: 90%;
+  max-width: 1200px;
+  gap: 7.5px;
 }
 
 #main-canvas-container{
-  
+  max-width: 600px;
+  position: relative;
+}
+
+.canvas-frame{
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url(../img/site-style/preview_frame_sized.png);
+  border-image-slice: 3%;
+  width: calc(100% - 24px);
+  height: calc(100% - 24px);
+  z-index: 100;
 }
 
 #main-canvas{
@@ -60,11 +87,18 @@ body {
   width: auto;
   height: auto;
   object-fit: scale-down;
+  /* border-style: solid;
+  border-width: 12px;
+  border-image-source: url(../img/site-style/preview_frame_sized.png);
+  border-image-slice: 3%; */
 }
 
 #user-interface-container{
+  max-width: 600px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  /* grid-template-columns: repeat(2, 1fr); */
+  grid-template-columns: 15% 85%;
+  gap: 5px;
 }
 
 #misc-container{
@@ -80,12 +114,59 @@ body {
   display: grid;
   grid-auto-flow: row;
   gap: 10px;
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
+
+  background-image: url('../img/site-style/background2.png');
+  background-size: inherit;
+  background-repeat: no-repeat;
+  background-position: center center;
+
+  /* border-style: solid;
+  border-width: 12px;
+  border-image-source: url('../img/site-style/tab_frame_sized.png');
+  border-image-slice: 20%; */
+  /* width: 72px; */
+  width: 100%;
+  position: relative;
+  
+}
+
+.category-frame{
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url('../img/site-style/tab_frame_sized.png');
+  border-image-slice: 15;
+  width: calc(100% - 24px);
+  height: calc(100% - 24px);
+  z-index: 100;
 }
 
 .category-button{
   display: block;
+  width: 50px;
+  height: auto;
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url('../img/site-style/category_frame_sized.png');
+  border-image-slice: 20%;
+}
+
+#options-container{
+  background-image: url('../img/site-style/background1.png');
+  background-size: inherit;
+  background-repeat: no-repeat;
+  background-position: center center;
+  position: relative;
+}
+
+.options-frame{
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url('../img/site-style/part_select_frame_sized.png');
+  border-image-slice: 15;
+  width: calc(100% - 22px);
+  height:calc(100% - 22px);
 }
 
 .option-container {
@@ -101,24 +182,19 @@ body {
   width: 100px;
   height: 100px;
   padding: 0;
-  background-color: aquamarine;
+
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url('../img/site-style/part_frame_sized.png');
+  border-image-slice: 20%;
 }
 
 .option-icon {
   top: 0;
   right: 0;
   position: absolute;
-  width: 100px;
-  height: 100px;
-}
-
-.border-box, .grid-item {
-  border: #0d1b1e 2px solid;
-  box-sizing: border-box;
-  overflow: hidden;
-  gap: 10px;
-  background-color: white;
-  border-radius: 10px;
+  width: 100%;
+  height: auto;
 }
 
 .footer {
