--- a/css/app.css
+++ b/css/app.css
@@ -49,6 +49,22 @@ body {
   border-radius: 15px;
 }
 
+.row {
+  flex-direction: row;
+  justify-content: center;
+  width: 100%;
+  display: flex;
+  margin-bottom: 1em;
+  flex-wrap: wrap;
+}
+
+.center-align {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
 #main-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -94,8 +110,15 @@ body {
   border-image-slice: 3%; */
 }
 
+#right-side-container{
+  grid-template-rows: calc(100% - 78px) 78px;
+  display: grid;
+  height: 585px;
+  gap: 5px;
+}
+
 #user-interface-container{
-  height: 600px;
+  height: 100%;
   max-width: 600px;
   display: grid;
   /* grid-template-columns: repeat(2, 1fr); */
@@ -104,12 +127,29 @@ body {
 }
 
 #misc-container{
-  padding-top: 1em;
-  gap: 10px;
+  height: 100%;
+  width: calc(100% + 5px);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px
 }
 
 .misc-button{
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  height: calc(100% - 5px);
   min-width: 150px;
+  padding: 0;
+  border-radius: 20px;
+}
+
+#misc-button-random{
+  background-image: url('../img/site-style/button_random.png');
+}
+
+#misc-button-generate{
+  background-image: url('../img/site-style/button_generate.png');
 }
 
 #category-container{
@@ -175,15 +215,22 @@ body {
   /* display: grid;
   grid-template-columns: repeat(5, 1fr); */
   /* width: 600px; */
+  width: 100%;
+  padding: 5%;
   gap: 10px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   /* grid-auto-rows: minmax(100px, auto); */
 }
 
 .option-button {
   position: relative;
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   padding: 0;
+  margin: 0;
+  aspect-ratio: 1;
 
   /* border-style: solid;
   border-width: 12px;
@@ -210,50 +257,6 @@ body {
 
 .footer {
   margin-top: calc(2* 1em);
-}
-
-.standard-width {
-  width: 520px;
-}
-
-.alert-icon {
-  height: 128px;
-  width: 128px;
-  float: left;
-  margin-right: 1em;
-}
-
-#list {
-  display: block;
-  width: 520px;
-}
-
-#tags {
-  display: block;
-  width: 520px;
-}
-
-.row {
-  flex-direction: row;
-  justify-content: center;
-  width: 100%;
-  display: flex;
-  margin-bottom: 1em;
-  flex-wrap: wrap;
-}
-
-.center-align, .center-align-title {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.center-align-title {
-  margin: auto;
-  margin-top: 1em;
-  margin-bottom: 1em;
-  width: 85%;
 }
 
 .no-wrap {
