--- a/css/app.css
+++ b/css/app.css
@@ -34,6 +34,11 @@ body {
   pointer-events: none !important;
 }
 
+::-webkit-scrollbar {
+  width: 0px;  /* Remove scrollbar space */
+  background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 .frame {
   position: absolute;
   top: 0;
@@ -174,6 +179,15 @@ body {
   
 }
 
+#category-inner-container{
+  display: grid;
+  height: auto;
+  overflow-x: auto;
+  overflow-y: auto;
+  white-space: nowrap;
+  gap: 10px;
+}
+
 .category-frame{
   border-style: solid;
   border-width: 12px;
@@ -200,6 +214,7 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   position: relative;
+  overflow-y: scroll;
 }
 
 .options-frame{
@@ -220,7 +235,8 @@ body {
   gap: 10px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  /* grid-template-rows: repeat(4, 1fr); */
+  align-items: start;
   /* grid-auto-rows: minmax(100px, auto); */
 }
 
@@ -383,10 +399,8 @@ body {
     grid-template-rows: 15% calc(85% - 5px);
     gap: 5px 5px;
   }
-  #category-container{
+  #category-inner-container{
     grid-auto-flow: column;
-    overflow-x: scroll;
-    overflow-y: hidden;
   }
 
 }
