--- a/css/app.css
+++ b/css/app.css
@@ -34,9 +34,10 @@ body {
   pointer-events: none !important;
 }
 
-::-webkit-scrollbar {
-  width: 100%;  /* Remove scrollbar space */
-  background: transparent;  /* Optional: just make scrollbar invisible */
+::-webkit-scrollbar { 
+  width: 0;
+  height: 0;
+  background: transparent;
 }
 
 .frame {
@@ -68,6 +69,16 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+}
+
+#pop-up-container{
+  top: 0;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  background-color: #0d1b1e;
+  opacity: 0.5;
+  z-index: 1000;
 }
 
 #main-container {
@@ -189,9 +200,6 @@ body {
 }
 
 #category-container{
-  display: grid;
-  grid-auto-flow: row;
-  gap: 10px;
   overflow-y: hidden;
   overflow-x: hidden;
 
@@ -200,23 +208,33 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
 
-  /* border-style: solid;
-  border-width: 12px;
-  border-image-source: url('../img/site-style/tab_frame_sized.png');
-  border-image-slice: 20%; */
-  /* width: 72px; */
   width: 100%;
   position: relative;
   
 }
 
 #category-inner-container{
-  display: grid;
+  /* display: grid;
   height: auto;
   overflow-x: auto;
   overflow-y: auto;
   white-space: nowrap;
-  gap: 10px;
+  gap: 10px; */
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
+  overflow-x: scroll;
+}
+
+#category-inner-inner-container{
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  gap: 5%;
+  padding: 5%;
+  padding-top: 15%;
+  padding-bottom: 15%;
+  box-sizing: border-box;
 }
 
 .category-frame{
@@ -231,12 +249,18 @@ body {
 
 .category-button{
   display: block;
-  width: 50px;
-  height: auto;
   border-style: solid;
-  border-width: 12px;
+  /* border-width: 12px;
   border-image-source: url('../img/site-style/category_frame_sized.png');
-  border-image-slice: 20%;
+  border-image-slice: 20%; */
+
+  font-size: 0;
+  aspect-ratio: 1;
+  width: 80%;
+  height: 80%;
+  position: relative;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #options-container{
@@ -325,18 +349,18 @@ body {
 }
 
 .hair-front > .option-icon {
-  top: 30%;
-  transform: scale(1.5);
+  top: 15%;
+  transform: scale(1.2);
 }
 
 .hair-back > .option-icon {
-  top: 30%;
-  transform: scale(1.5);
+  top: 15%;
+  transform: scale(1.2);
 }
 
 .hair-extra > .option-icon {
   top: 30%;
-  transform: scale(1.5);
+  transform: scale(1.2);
 }
 
 .clothes-inner > .option-icon {
@@ -355,6 +379,10 @@ body {
 
 .no-wrap {
   flex-wrap: nowrap;
+}
+
+.button-arrow{
+  width: 100%;
 }
 
 .buttons, .dropdowns, .inputs {
@@ -434,11 +462,20 @@ body {
   }
   #user-interface-container{
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 15% calc(85% - 5px);
+    grid-template-rows: 25% calc(75% - 5px);
     gap: 5px 5px;
   }
+
   #category-inner-container{
-    grid-auto-flow: column;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+
+  #category-inner-inner-container{
+    overflow-x: scroll;
+    overflow-y: hidden;
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 
 }
