--- a/css/app.css
+++ b/css/app.css
@@ -4,6 +4,7 @@ html {
 
 main {
   font-size: 10pt;
+  height: 75vh;
 }
 
 ul {
@@ -55,6 +56,12 @@ body {
   border-radius: 15px;
 }
 
+.selected{
+  border-color: yellow !important;
+  box-shadow: 0 0 20px yellow;
+  animation: anim-pulse 1s ease-in-out infinite alternate;
+}
+
 .row {
   flex-direction: row;
   justify-content: center;
@@ -76,9 +83,60 @@ body {
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: #0d1b1e;
-  opacity: 0.5;
   z-index: 1000;
+}
+
+#pop-up-background{
+  position: absolute;
+  background-color: white;
+  opacity: 0.5;
+  height: 100%;
+  width: 100%;
+}
+
+#pop-up-content-container{
+  position: relative;
+  z-index: 1;
+  width: 90%;
+  max-width: 520px;
+  height: 90%;
+  box-shadow: 0 0 150px black;
+  border-radius: 38px;
+}
+
+#pop-up-inner-content-container{
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  grid-column-gap: 5px;
+  grid-row-gap: 5px;
+}
+
+#pop-up-inner-content-container:nth-child(1){
+  grid-area: 1 / 1 / 2 / 3;
+}
+#pop-up-inner-content-container:nth-child(2){
+  grid-area: 2 / 1 / 3 / 3;
+}
+#pop-up-inner-content-container:nth-child(3){
+  grid-area: 3 / 1 / 4 / 2;
+}
+#pop-up-inner-content-container:nth-child(4){
+  grid-area: 3 / 2 / 4 / 3;
+}
+
+.pop-up-frame{
+  border-style: solid;
+  border-width: 32px;
+  border-image-source: url(../img/site-style/generate_frame.png);
+  border-image-slice: 50;
+  width: calc(100% - 64px);
+  height: calc(100% - 64px);
+  z-index: 100;
+}
+
+.fade-in{
+  animation: anim-fade-in 0.5s ease-in-out;
 }
 
 #main-container {
@@ -452,6 +510,24 @@ body {
   }
   to {
     transform: rotate(15deg);
+  }
+}
+
+@keyframes anim-pulse {
+  from {
+    box-shadow: 0 0 20px yellow;
+  }
+  to {
+    box-shadow: 0 0 10px yellow;
+  }
+}
+
+@keyframes anim-fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 100%;
   }
 }
 
