--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ main {
 }
 
 ul {
-  width: 520px;
+  width: 100%;
 }
 
 li {
@@ -76,6 +76,7 @@ body {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 #pop-up-container{
@@ -100,29 +101,37 @@ body {
   width: 90%;
   max-width: 520px;
   height: 90%;
-  box-shadow: 0 0 150px black;
+  box-shadow: 0 0 5em black;
   border-radius: 38px;
 }
 
+#pop-up-photo{
+  aspect-ratio: 1;
+}
+
 #pop-up-inner-content-container{
+  position: relative;
+  width: calc(100% - 64px);
+  height: calc(100% - 64px);
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(3, 1fr);
   grid-column-gap: 5px;
   grid-row-gap: 5px;
 }
 
-#pop-up-inner-content-container:nth-child(1){
-  grid-area: 1 / 1 / 2 / 3;
+.pop-up-1{
+  grid-area: 1 / 1 / 3 / 2;
 }
-#pop-up-inner-content-container:nth-child(2){
-  grid-area: 2 / 1 / 3 / 3;
+.pop-up-2{
+  grid-area: 3 / 1 / 4 / 2
 }
-#pop-up-inner-content-container:nth-child(3){
-  grid-area: 3 / 1 / 4 / 2;
-}
-#pop-up-inner-content-container:nth-child(4){
-  grid-area: 3 / 2 / 4 / 3;
+.pop-up-3{
+  height: 78px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5px;
 }
 
 .pop-up-frame{
@@ -213,7 +222,6 @@ body {
   background-repeat: no-repeat;
   background-position: center center;
   height: calc(100% - 5px);
-  min-width: 150px;
   padding: 0;
   border-radius: 20px;
 }
@@ -251,6 +259,44 @@ body {
   border-style: solid;
   border-width: 12px;
   border-image-source: url(../img/site-style/button2_f.png);
+  border-image-slice: 15;
+  width: calc(100% - 24px);
+  height: calc(100% - 24px);
+  z-index: 100;
+}
+
+#misc-button-download{
+  position: relative;
+  background-image: url('../img/site-style/button4_bg.png');
+}
+
+#misc-button-download > img {
+  width: 100%;
+}
+
+.misc-button-download-frame{
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url(../img/site-style/button4_f.png);
+  border-image-slice: 15;
+  width: calc(100% - 24px);
+  height: calc(100% - 24px);
+  z-index: 100;
+}
+
+#misc-button-credits{
+  position: relative;
+  background-image: url('../img/site-style/button5_bg.png');
+}
+
+#misc-button-credits > img {
+  width: 100%;
+}
+
+.misc-button-credits-frame{
+  border-style: solid;
+  border-width: 12px;
+  border-image-source: url(../img/site-style/button5_f.png);
   border-image-slice: 15;
   width: calc(100% - 24px);
   height: calc(100% - 24px);
