--- a/css/app.css
+++ b/css/app.css
@@ -154,12 +154,22 @@ body {
   height: calc(100% - 64px);
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(2, 1fr);
+  grid-template-rows: 1.2fr 0.8fr;
   grid-row-gap: 5px;
 }
 
 .pop-up-1{
   grid-area: 1 / 1 / 2 / 3;
+  display: block;
+  object-fit: scale-down;
+  max-width: 100%;
+  flex: 1;
+  min-height: 0;
+  height: 100%;
+  background: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin: auto;
 }
 .pop-up-2{
   grid-area: 2 / 1 / 3 / 3;
@@ -650,7 +660,7 @@ body {
 
 .button-disabled{
   pointer-events: none;
-  opacity: 0.5;
+  opacity: 0.3;
 }
 
 .button-arrow-up{
