--- a/css/app.css
+++ b/css/app.css
@@ -564,11 +564,13 @@ body {
 }
 
 .mouth > .option-icon {
-  top: 15%;
+  left: -5%;
+  top: 17%;
   transform: scale(8);
 }
 
 .mouth.real > .option-icon {
+  left: 0%;
   top: 100%;
   transform: scale(8);
 }
@@ -659,6 +661,7 @@ body {
 }
 
 .none-icon{
+  left: 0 !important;
   top: 0 !important;
   height: 100% !important;
   width: 100% !important;
