--- a/css/app.css
+++ b/css/app.css
@@ -221,6 +221,11 @@ body {
   gap: 5px;
 }
 
+.cool-font-shadow{
+  color: white;
+  text-shadow: -2px 0 #0d1b1e, 0 -2px #0d1b1e, 2px 0 #0d1b1e, 0 2px #0d1b1e, 2px 2px #0d1b1e, -2px -2px #0d1b1e, -2px 2px #0d1b1e, 2px -2px #0d1b1e, 4px 4px #FE79FA;
+}
+
 #marquee-text{
   position: absolute;
   z-index: 101;
@@ -229,8 +234,8 @@ body {
   color: white;
   font-size: 32px;
   font-weight: bold;
-  text-shadow: 3px 3px 20px #ff99cc, -2px 1px 30px #ff99cc;
-  -webkit-text-stroke: 1px black;
+  /* text-shadow: 3px 3px 20px #ff99cc, -2px 1px 30px #ff99cc; */
+  /* -webkit-text-stroke: 1px black; */
 }
 
 #marquee-image{
